@@ -6,7 +6,6 @@ import de.sormuras.bartholdy.Bartholdy;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Locale;
 
 /** Ant. */
@@ -28,10 +27,10 @@ public class Ant extends AbstractTool {
     if (!Files.isDirectory(home)) {
       throw new IllegalArgumentException("not a directory: " + home);
     }
-    if (!Files.isRegularFile(home.resolve(Paths.get("bin", "ant")))) {
+    if (!Files.isRegularFile(home.resolve(Path.of("bin", "ant")))) {
       throw new IllegalArgumentException("`bin/ant` launch script not found in: " + home);
     }
-    var jar = home.resolve(Paths.get("lib", "ant.jar"));
+    var jar = home.resolve(Path.of("lib", "ant.jar"));
     if (!Files.isRegularFile(jar)) {
       throw new IllegalArgumentException("main `lib/ant.jar` not found in: " + home);
     }
